--- a/flagger-frontend/reports/index.html
+++ b/flagger-frontend/reports/index.html
@@ -17,7 +17,7 @@
 <body>
   
   <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
-    <a class="navbar-brand" href="#">Shoonya Flagger</a>
+    <a class="navbar-brand" href="/">Shoonya Flagger</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
