--- a/flagger-frontend/flags/index.html
+++ b/flagger-frontend/flags/index.html
@@ -141,7 +141,8 @@
           new DataTable('#DataTable', {
               layout: {
                   topStart: {
-                      buttons: ['copy', 'csv', 'excel', 'pdf', 'print']
+                      buttons: ['pdf', 'print'],
+                      order: [[8, 'desc']]
                   }
               }
           });
