--- a/flagger-frontend/reports/index.html
+++ b/flagger-frontend/reports/index.html
@@ -121,7 +121,8 @@
           new DataTable('#DataTable', {
               layout: {
                   topStart: {
-                      buttons: ['copy', 'csv', 'excel', 'pdf', 'print']
+                      buttons: ['pdf', 'print'],
+                      order: [[1, 'desc']]
                   }
               }
           });
