--- a/flagger-frontend/flags/index.html
+++ b/flagger-frontend/flags/index.html
@@ -139,10 +139,10 @@
           });
 
           new DataTable('#DataTable', {
+              order: [[8, 'desc']],
               layout: {
                   topStart: {
-                      buttons: ['pdf', 'print'],
-                      order: [[8, 'desc']]
+                      buttons: ['pdf', 'print']
                   }
               }
           });
